...
        android:id="@+id/first_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Username"
            android:maxLength="15"/>
    </android.support.design.widget.TextInputLayout>
...
        android:id="@+id/second_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="First Name"
        android:maxLength="20"/>
    </android.support.design.widget.TextInputLayout>
...
        android:id="@+id/third_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Last Name"
        android:maxLength="20"/>
    </android.support.design.widget.TextInputLayout>
...
    <android.support.design.widget.TextInputLayout
        android:id="@+id/fourth_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:hint="Email"
        android:maxLength="254"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addPlayer"
        android:text="Submit" />

</LinearLayout>
