...

    <TextView
        android:id="@+id/fNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="John"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/lNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="Doe"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log Out" />
    </LinearLayout>

</LinearLayout>
