...
                android:inputType="text"
                android:maxLength="15"
                android:textStyle="italic" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="login"
            android:text="Log In" />

        <Button
            android:id="@+id/addPlayerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:onClick="add_player"
            android:text="Add Player" />

    </LinearLayout>

</android.widget.RelativeLayout>
