...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/create_scramble_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createScramble"
        android:text="+ Create Scramble" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="none">
...
